--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,17 @@
   @tailwind components;
   @tailwind utilities;
   
+  @layer base {
+    body {
+      -webkit-font-smoothing: antialiased;
+      @apply font-dmSans dark:bg-slate-950 bg-slate-200 dark:text-slate-200 text-slate-950
+    }
+  }
+
+  ::-webkit-scrollbar {
+    @apply w-1 bg-transparent
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    @apply dark:bg-slate-900 bg-slate-400 w-1 rounded-md
+  }
